--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7340,7 +7340,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T20:59:14Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7409,11 +7409,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WimumgECuaou
-								f0FpijTfdQ==
+								1J9E9/Mxco8X
+								37twoAJP6Q==
 								</data>
 								<key>Size</key>
-								<integer>60584</integer>
+								<integer>60550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8066,7 +8066,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T20:59:14Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8135,11 +8135,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ogdIJy/z5d/K
-								2TGYcGV0ng==
+								bUxkfGR+zufc
+								mpkuYGk0Ug==
 								</data>
 								<key>Size</key>
-								<integer>44107</integer>
+								<integer>44121</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8400,21 +8400,11 @@
 					<key>page66 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-19T14:13:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110286.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								eJZRkRC1fETt
-								YtzBzV0WQw==
-								</data>
-								<key>Size</key>
-								<integer>4170</integer>
-							</dict>
 							<key>files/small_109886.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8434,6 +8424,26 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-1139604-1198x776.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								h6KSCjSrRFfm
+								Wbpc2JXS9w==
+								</data>
+								<key>Size</key>
+								<integer>87749</integer>
+							</dict>
+							<key>files/stacks-image-1139604-1198x776@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DhucPxitAWTU
+								Mkuv6Az9Eg==
+								</data>
+								<key>Size</key>
+								<integer>164952</integer>
 							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
@@ -8489,11 +8499,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wDebctbxKhZO
-								yOLYFVyITA==
+								qe6DhnJsOIMA
+								8UIpBTbMTw==
 								</data>
 								<key>Size</key>
-								<integer>25223</integer>
+								<integer>25849</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -8559,11 +8569,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2jctMEloizLI
-								TkLgO4m/aQ==
+								YP0wszShZ2ka
+								00d6jDuYeg==
 								</data>
 								<key>Size</key>
-								<integer>143872</integer>
+								<integer>142707</integer>
 							</dict>
 							<key>files/stacks_page_page66.js</key>
 							<dict>
@@ -8579,11 +8589,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rFCAT8BZgwhA
-								FbXrK5rZxQ==
+								+cj9PywvYtrR
+								hD9Cl433PQ==
 								</data>
 								<key>Size</key>
-								<integer>77055</integer>
+								<integer>76952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8596,7 +8606,7 @@
 					<key>page67 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:28:12Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8665,11 +8675,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gdoow3tYvFam
-								543fvJfSpw==
+								6Smhjib/WNc6
+								hSZfxIXBxw==
 								</data>
 								<key>Size</key>
-								<integer>43447</integer>
+								<integer>43446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9572,7 +9582,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T20:59:14Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9621,11 +9631,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iajEs8Vgwz1l
-								apvdy9Ciqg==
+								Bs0AK77rI6EW
+								tclnQNwq3w==
 								</data>
 								<key>Size</key>
-								<integer>4448</integer>
+								<integer>4480</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9674,7 +9684,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T20:59:14Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10713,11 +10723,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6gwdfJ+57wLU
-								jrpgPtIeGA==
+								X5yG48o2vcNf
+								6t1Vhwhq8Q==
 								</data>
 								<key>Size</key>
-								<integer>3401</integer>
+								<integer>4067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10821,7 +10831,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAvJc50pWegAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAvQ99L20zgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10832,7 +10842,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC8lznSmVuA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC9D30vccmA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
