--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/3-Call-for-Visualization-Prize/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/3-Call-for-Visualization-Prize/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:28:12Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gdoow3tYvFam
-								543fvJfSpw==
+								6Smhjib/WNc6
+								hSZfxIXBxw==
 								</data>
 								<key>Size</key>
-								<integer>43447</integer>
+								<integer>43446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
