--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T20:59:14Z</date>
+						<date>2018-10-19T14:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WimumgECuaou
-								f0FpijTfdQ==
+								1J9E9/Mxco8X
+								37twoAJP6Q==
 								</data>
 								<key>Size</key>
-								<integer>60584</integer>
+								<integer>60550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
