SPC members NetSci
SPC members NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6912,7 +6912,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-20T14:49:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7027,6 +7027,26 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
+							<key>files/stacks-image-6db2017-500x376.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GVZ9KS7rE91A
+								8uem+lkIuw==
+								</data>
+								<key>Size</key>
+								<integer>29258</integer>
+							</dict>
+							<key>files/stacks-image-6db2017-500x376@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZlYW9B62liuJ
+								YtZ8UXJDdg==
+								</data>
+								<key>Size</key>
+								<integer>45750</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7077,6 +7097,16 @@
 								<key>Size</key>
 								<integer>73705</integer>
 							</dict>
+							<key>files/stacks-image-b379a6f-498x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6Q3u+WTJRADR
+								m6V/PGVNpA==
+								</data>
+								<key>Size</key>
+								<integer>53904</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7111,31 +7141,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LgghNeJtRf9k
-								XLjCHqYgfQ==
+								VooSPf8nMkUe
+								kMS+jMwjhQ==
 								</data>
 								<key>Size</key>
-								<integer>160443</integer>
+								<integer>167066</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1KXFcmsFz6Ci
-								BEW5Lwgb1Q==
+								CiW73tj1J8sU
+								RJ8nX4g/zw==
 								</data>
 								<key>Size</key>
-								<integer>26389</integer>
+								<integer>26753</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tKzAWv96kmSk
-								z31Dnf92Tg==
+								7x05EH0cqxcc
+								3i/r+NSf2g==
 								</data>
 								<key>Size</key>
-								<integer>91948</integer>
+								<integer>99915</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7522,7 +7552,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:15Z</date>
+						<date>2018-10-20T14:50:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7546,6 +7576,16 @@
 								</data>
 								<key>Size</key>
 								<integer>43545</integer>
+							</dict>
+							<key>files/stacks-image-1118fd8.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sFraoy+16ql5
+								9exyyMmEmg==
+								</data>
+								<key>Size</key>
+								<integer>35091</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -7617,6 +7657,26 @@
 								<key>Size</key>
 								<integer>69706</integer>
 							</dict>
+							<key>files/stacks-image-6db2017-500x376.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GVZ9KS7rE91A
+								8uem+lkIuw==
+								</data>
+								<key>Size</key>
+								<integer>29258</integer>
+							</dict>
+							<key>files/stacks-image-6db2017-500x376@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZlYW9B62liuJ
+								YtZ8UXJDdg==
+								</data>
+								<key>Size</key>
+								<integer>45750</integer>
+							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7667,6 +7727,16 @@
 								<key>Size</key>
 								<integer>61696</integer>
 							</dict>
+							<key>files/stacks-image-b379a6f-498x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6Q3u+WTJRADR
+								m6V/PGVNpA==
+								</data>
+								<key>Size</key>
+								<integer>53904</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7691,31 +7761,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+kAYPEQdGJpC
-								rD6/l8ZBJg==
+								rNqUxvKEXVW3
+								I06zWAJfMQ==
 								</data>
 								<key>Size</key>
-								<integer>147720</integer>
+								<integer>158219</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pI5NH38xphmN
-								OUM7uYrdpg==
+								SzC2iYZx6zNe
+								uNWzaLecHw==
 								</data>
 								<key>Size</key>
-								<integer>26389</integer>
+								<integer>26935</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hWLNm9xmhsYW
-								J0Z3ZE4cHA==
+								ZvHme4zsTCGX
+								lv2wqZdivQ==
 								</data>
 								<key>Size</key>
-								<integer>76813</integer>
+								<integer>87620</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9592,7 +9662,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:30:01Z</date>
+						<date>2018-10-20T14:50:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9641,11 +9711,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hjtu8dkkoMdJ
-								/pEMxb3eNw==
+								4pfuTOQV3e0F
+								7V0pTjmUOQ==
 								</data>
 								<key>Size</key>
-								<integer>5890</integer>
+								<integer>4514</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9694,7 +9764,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:17:26Z</date>
+						<date>2018-10-20T14:49:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10841,7 +10911,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAvRD2NNDEgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAvbwZk80DgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10852,7 +10922,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC9EPY00vaA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC9vBmT0HSA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
