--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:15Z</date>
+						<date>2018-10-20T14:50:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -59,6 +59,16 @@
 								</data>
 								<key>Size</key>
 								<integer>43545</integer>
+							</dict>
+							<key>files/stacks-image-1118fd8.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sFraoy+16ql5
+								9exyyMmEmg==
+								</data>
+								<key>Size</key>
+								<integer>35091</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -130,6 +140,26 @@
 								<key>Size</key>
 								<integer>69706</integer>
 							</dict>
+							<key>files/stacks-image-6db2017-500x376.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GVZ9KS7rE91A
+								8uem+lkIuw==
+								</data>
+								<key>Size</key>
+								<integer>29258</integer>
+							</dict>
+							<key>files/stacks-image-6db2017-500x376@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZlYW9B62liuJ
+								YtZ8UXJDdg==
+								</data>
+								<key>Size</key>
+								<integer>45750</integer>
+							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -180,6 +210,16 @@
 								<key>Size</key>
 								<integer>61696</integer>
 							</dict>
+							<key>files/stacks-image-b379a6f-498x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6Q3u+WTJRADR
+								m6V/PGVNpA==
+								</data>
+								<key>Size</key>
+								<integer>53904</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -204,31 +244,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+kAYPEQdGJpC
-								rD6/l8ZBJg==
+								rNqUxvKEXVW3
+								I06zWAJfMQ==
 								</data>
 								<key>Size</key>
-								<integer>147720</integer>
+								<integer>158219</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								pI5NH38xphmN
-								OUM7uYrdpg==
+								SzC2iYZx6zNe
+								uNWzaLecHw==
 								</data>
 								<key>Size</key>
-								<integer>26389</integer>
+								<integer>26935</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hWLNm9xmhsYW
-								J0Z3ZE4cHA==
+								ZvHme4zsTCGX
+								lv2wqZdivQ==
 								</data>
 								<key>Size</key>
-								<integer>76813</integer>
+								<integer>87620</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
