--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-20T14:49:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -150,6 +150,26 @@
 								<key>Size</key>
 								<integer>146527</integer>
 							</dict>
+							<key>files/stacks-image-6db2017-500x376.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GVZ9KS7rE91A
+								8uem+lkIuw==
+								</data>
+								<key>Size</key>
+								<integer>29258</integer>
+							</dict>
+							<key>files/stacks-image-6db2017-500x376@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZlYW9B62liuJ
+								YtZ8UXJDdg==
+								</data>
+								<key>Size</key>
+								<integer>45750</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -200,6 +220,16 @@
 								<key>Size</key>
 								<integer>73705</integer>
 							</dict>
+							<key>files/stacks-image-b379a6f-498x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6Q3u+WTJRADR
+								m6V/PGVNpA==
+								</data>
+								<key>Size</key>
+								<integer>53904</integer>
+							</dict>
 							<key>files/stacks-image-cd0a404.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -234,31 +264,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LgghNeJtRf9k
-								XLjCHqYgfQ==
+								VooSPf8nMkUe
+								kMS+jMwjhQ==
 								</data>
 								<key>Size</key>
-								<integer>160443</integer>
+								<integer>167066</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1KXFcmsFz6Ci
-								BEW5Lwgb1Q==
+								CiW73tj1J8sU
+								RJ8nX4g/zw==
 								</data>
 								<key>Size</key>
-								<integer>26389</integer>
+								<integer>26753</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tKzAWv96kmSk
-								z31Dnf92Tg==
+								7x05EH0cqxcc
+								3i/r+NSf2g==
 								</data>
 								<key>Size</key>
-								<integer>91948</integer>
+								<integer>99915</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
