--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -6912,7 +6912,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T14:49:15Z</date>
+						<date>2018-10-20T19:19:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6936,6 +6936,16 @@
 								</data>
 								<key>Size</key>
 								<integer>43545</integer>
+							</dict>
+							<key>files/stacks-image-1118fd8.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								sFraoy+16ql5
+								9exyyMmEmg==
+								</data>
+								<key>Size</key>
+								<integer>35091</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -7141,31 +7151,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VooSPf8nMkUe
-								kMS+jMwjhQ==
+								4GUbxCgCIz5G
+								yJoj01vjfg==
 								</data>
 								<key>Size</key>
-								<integer>167066</integer>
+								<integer>170942</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								CiW73tj1J8sU
-								RJ8nX4g/zw==
+								tsqAfMH/8zqz
+								MtIZyZa0zw==
 								</data>
 								<key>Size</key>
-								<integer>26753</integer>
+								<integer>26935</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7x05EH0cqxcc
-								3i/r+NSf2g==
+								FlFXFziWeMrQ
+								3D/J4pyD3Q==
 								</data>
 								<key>Size</key>
-								<integer>99915</integer>
+								<integer>102755</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7798,7 +7808,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-20T19:28:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7812,6 +7822,26 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-2968668-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2Pay0nv4SFnl
+								znr6aJIKwQ==
+								</data>
+								<key>Size</key>
+								<integer>11772</integer>
+							</dict>
+							<key>files/stacks-image-2968668-150x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ALVF6wWWPquz
+								xm8Y2CAOkw==
+								</data>
+								<key>Size</key>
+								<integer>34884</integer>
 							</dict>
 							<key>files/stacks-image-2c90133-700x398.png</key>
 							<dict>
@@ -7833,6 +7863,86 @@
 								<key>Size</key>
 								<integer>13349</integer>
 							</dict>
+							<key>files/stacks-image-61fe2fb-148x138.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hCdR5mkQFPYL
+								cSAiG11kvw==
+								</data>
+								<key>Size</key>
+								<integer>6537</integer>
+							</dict>
+							<key>files/stacks-image-61fe2fb-148x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								m8xE8qQUZt/T
+								2Hf04D/pTw==
+								</data>
+								<key>Size</key>
+								<integer>18193</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Adm2Va/nN0fC
+								/6z45qI77Q==
+								</data>
+								<key>Size</key>
+								<integer>20573</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								13yn9YtbsV9D
+								O4SKdVfDkg==
+								</data>
+								<key>Size</key>
+								<integer>63137</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LzH3uKX8uTKF
+								kMb6PweJQw==
+								</data>
+								<key>Size</key>
+								<integer>25723</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ulRvSuax0xFi
+								j1R3/SUVbQ==
+								</data>
+								<key>Size</key>
+								<integer>83792</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dCg8Ts08xKRv
+								9givCO/izw==
+								</data>
+								<key>Size</key>
+								<integer>15267</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nROmvmMU9FyR
+								mbY5FokjgA==
+								</data>
+								<key>Size</key>
+								<integer>50266</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7843,25 +7953,35 @@
 								<key>Size</key>
 								<integer>21870</integer>
 							</dict>
-							<key>files/stacks-image-d2c4351-164x250.png</key>
+							<key>files/stacks-image-cc75d0b-150x138.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5cpdWgCZk7HV
-								ROwHuQNbEg==
+								b+d1bvr5vIM6
+								ukIHFZGccg==
 								</data>
 								<key>Size</key>
-								<integer>29154</integer>
+								<integer>21608</integer>
+							</dict>
+							<key>files/stacks-image-cc75d0b-150x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YyIW5pmPU9Fa
+								uML/DD+rIA==
+								</data>
+								<key>Size</key>
+								<integer>67421</integer>
 							</dict>
 							<key>files/stacks_page_page59.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jKUv+Zxn8pQ6
-								h+wq1WifKQ==
+								SMzFrtkDQNO8
+								ngr19a1BNw==
 								</data>
 								<key>Size</key>
-								<integer>103987</integer>
+								<integer>114125</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -7877,11 +7997,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ab3tx+IP+wqh
-								NOjMxtJj6g==
+								VguzBsdvZ/5Y
+								speBsmGrRQ==
 								</data>
 								<key>Size</key>
-								<integer>40484</integer>
+								<integer>55271</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9662,7 +9782,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T14:50:24Z</date>
+						<date>2018-10-20T19:24:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9711,8 +9831,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4pfuTOQV3e0F
-								7V0pTjmUOQ==
+								QrWy5dJ0NDqL
+								Ul/r1AcOeg==
 								</data>
 								<key>Size</key>
 								<integer>4514</integer>
@@ -9764,7 +9884,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T14:49:15Z</date>
+						<date>2018-10-20T19:24:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10907,31 +11027,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
-				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
-				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
-				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAvbwZk80DgAvSPj9AQVokY2xhc3Nu
-				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
-				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
-				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
-				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
-				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
-				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
-				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
-				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
-				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
-				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC9vBmT0HSA
+				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
+				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
+				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
+				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC93Lal
+				P8CAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
+				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
+				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
+				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
+				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
+				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
+				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
+				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
+				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC93LalQ42A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
-				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
+				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
+				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -10939,9 +11059,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
-				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
-				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
+				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
+				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
@@ -17195,7 +17315,7 @@
 					<key>UniqueBackupName</key>
 					<string>986C317C-4106-4888-8861-F3B56F718A72_rwbackup</string>
 					<key>UserAgentResizingPreset</key>
-					<integer>0</integer>
+					<integer>3</integer>
 					<key>WantsXMLSiteMap</key>
 					<true/>
 					<key>WebClipIcon</key>
