NIH Page - first round of edits

--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -252,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r6jEnL5kQQrS
-								oj9busHiFA==
+								DVWcea1OVeFs
+								i8CCh2xJqg==
 								</data>
 								<key>Size</key>
-								<integer>178277</integer>
+								<integer>177829</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -272,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0z6pC+x9FZwT
-								ryjIPbK7Lg==
+								RSKGScoT36lS
+								N41boXokcw==
 								</data>
 								<key>Size</key>
-								<integer>97659</integer>
+								<integer>96467</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
