--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -64,7 +64,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -373,11 +373,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7UgsyyPpfc8t
-								zxFQpXDnCg==
+								kL+OohHmjMmZ
+								fwfns2Eo+w==
 								</data>
 								<key>Size</key>
-								<integer>229925</integer>
+								<integer>227396</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -393,11 +393,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VS3W9EiiElhq
-								8I2GzR6I/w==
+								+4+6OFmJZkSn
+								i2baTtzZcA==
 								</data>
 								<key>Size</key>
-								<integer>152922</integer>
+								<integer>151229</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -410,7 +410,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T20:55:58Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -419,11 +419,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z8jXR3NU3jK3
-								qsrpIApCJw==
+								rt7PJm/3u5hd
+								FooEmQrtFQ==
 								</data>
 								<key>Size</key>
-								<integer>69359</integer>
+								<integer>69077</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -699,11 +699,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ih7KVWqdZGkv
-								lgfPrEJAGQ==
+								5IKNsTBgueuo
+								MRQb7ufSfg==
 								</data>
 								<key>Size</key>
-								<integer>141938</integer>
+								<integer>141826</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -4230,7 +4230,7 @@
 					<key>page41 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4319,11 +4319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z3IHkwiBJiDK
-								patiTp5DGg==
+								VJe4NXSZeUIH
+								7moEupltIg==
 								</data>
 								<key>Size</key>
-								<integer>103212</integer>
+								<integer>102186</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -4339,11 +4339,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GbPPssCXMiMz
-								eP65Pl9/vw==
+								da6nrrSO90L3
+								yHXLeBFjqQ==
 								</data>
 								<key>Size</key>
-								<integer>43684</integer>
+								<integer>43014</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5256,7 +5256,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5475,11 +5475,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r6jEnL5kQQrS
-								oj9busHiFA==
+								DVWcea1OVeFs
+								i8CCh2xJqg==
 								</data>
 								<key>Size</key>
-								<integer>178277</integer>
+								<integer>177829</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -5495,11 +5495,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0z6pC+x9FZwT
-								ryjIPbK7Lg==
+								RSKGScoT36lS
+								N41boXokcw==
 								</data>
 								<key>Size</key>
-								<integer>97659</integer>
+								<integer>96467</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6484,7 +6484,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6508,6 +6508,16 @@
 								</data>
 								<key>Size</key>
 								<integer>234406</integer>
+							</dict>
+							<key>files/small_525723.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7ptO0Z9QNBVX
+								TOf1Zy8YhQ==
+								</data>
+								<key>Size</key>
+								<integer>46883</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -6573,11 +6583,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Q89wZoIk0kLj
-								PezZM/v04g==
+								nuh9DVcgXvXo
+								XsNK2A0D0g==
 								</data>
 								<key>Size</key>
-								<integer>156267</integer>
+								<integer>160933</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6593,11 +6603,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PjWy+fsMgwH6
-								WOwaFpH/rg==
+								waOXNZROqnIa
+								LzCOcppDgA==
 								</data>
 								<key>Size</key>
-								<integer>71043</integer>
+								<integer>75206</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9884,7 +9894,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T20:55:58Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10923,11 +10933,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7ud9ox9dETVB
-								UIYXW8wk3w==
+								6gwdfJ+57wLU
+								jrpgPtIeGA==
 								</data>
 								<key>Size</key>
-								<integer>3438</integer>
+								<integer>3401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11011,8 +11021,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcC95vEp
-				X8SAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDAVPxP
+				kwOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11022,7 +11032,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcC95vEpYpWA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDAVPxPlwuA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
