--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-20T20:55:58Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z8jXR3NU3jK3
-								qsrpIApCJw==
+								rt7PJm/3u5hd
+								FooEmQrtFQ==
 								</data>
 								<key>Size</key>
-								<integer>69359</integer>
+								<integer>69077</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -324,11 +324,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ih7KVWqdZGkv
-								lgfPrEJAGQ==
+								5IKNsTBgueuo
+								MRQb7ufSfg==
 								</data>
 								<key>Size</key>
-								<integer>141938</integer>
+								<integer>141826</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
