--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z3IHkwiBJiDK
-								patiTp5DGg==
+								VJe4NXSZeUIH
+								7moEupltIg==
 								</data>
 								<key>Size</key>
-								<integer>103212</integer>
+								<integer>102186</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GbPPssCXMiMz
-								eP65Pl9/vw==
+								da6nrrSO90L3
+								yHXLeBFjqQ==
 								</data>
 								<key>Size</key>
-								<integer>43684</integer>
+								<integer>43014</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
