--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T13:24:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7UgsyyPpfc8t
-								zxFQpXDnCg==
+								kL+OohHmjMmZ
+								fwfns2Eo+w==
 								</data>
 								<key>Size</key>
-								<integer>229925</integer>
+								<integer>227396</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VS3W9EiiElhq
-								8I2GzR6I/w==
+								+4+6OFmJZkSn
+								i2baTtzZcA==
 								</data>
 								<key>Size</key>
-								<integer>152922</integer>
+								<integer>151229</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
