--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-19T14:29:14Z</date>
+						<date>2018-10-24T14:25:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -272,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SiBjFTz/VEnz
-								KB1tRjkV+A==
+								3GtCPaoM9o7g
+								Ojh7HzJ6OA==
 								</data>
 								<key>Size</key>
-								<integer>227681</integer>
+								<integer>227625</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -292,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9H9lEtxQLD39
-								21RDHTNP6g==
+								v3cpIzSy+84v
+								q1iafaUYAw==
 								</data>
 								<key>Size</key>
-								<integer>128655</integer>
+								<integer>128514</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
