--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Vermont-Computer-Science-Alliance/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Vermont-Computer-Science-Alliance/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-26T13:38:21Z</date>
+						<date>2018-10-26T14:09:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -118,6 +118,26 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-7fa913a-926x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								PIQAfZuDYqPI
+								QVFWCJa0dg==
+								</data>
+								<key>Size</key>
+								<integer>191597</integer>
+							</dict>
+							<key>files/stacks-image-7fa913a-926x1200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MYP3uMvmfY4A
+								s5ibHb7epw==
+								</data>
+								<key>Size</key>
+								<integer>305372</integer>
+							</dict>
 							<key>files/stacks-image-8bd90e1.png</key>
 							<dict>
 								<key>Digest</key>
@@ -178,6 +198,16 @@
 								<key>Size</key>
 								<integer>30588</integer>
 							</dict>
+							<key>files/stacks-image-e33bcc7-650x198.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								07IbU+lr3l0r
+								h1dxavx18w==
+								</data>
+								<key>Size</key>
+								<integer>24595</integer>
+							</dict>
 							<key>files/stacks-image-e75ce61.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -202,11 +232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ahV2m8E1fCCU
-								VFVX5TByMg==
+								QrPU3dcfux4V
+								SknavHDevw==
 								</data>
 								<key>Size</key>
-								<integer>143931</integer>
+								<integer>156917</integer>
 							</dict>
 							<key>files/stacks_page_page66.js</key>
 							<dict>
@@ -222,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AdUljjM4LFbu
-								XPZ8gTO/hw==
+								8y0OtjJAS8aE
+								iakwOpOi6A==
 								</data>
 								<key>Size</key>
-								<integer>78755</integer>
+								<integer>85081</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
