--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Vermont-Computer-Science-Alliance/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Vermont-Computer-Science-Alliance/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-26T14:09:04Z</date>
+						<date>2018-10-26T14:15:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -252,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8y0OtjJAS8aE
-								iakwOpOi6A==
+								fGaqZoU5Hmfw
+								Q+nJBt27MA==
 								</data>
 								<key>Size</key>
-								<integer>85081</integer>
+								<integer>85046</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
